services/uptime-kuma/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptime-kuma
  namespace: services
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: uptime-kuma
  replicas: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: uptime-kuma
    spec:
      containers:
      - name: uptime-kuma
        image: louislam/uptime-kuma:1
        ports: 
          - containerPort: 3001
        volumeMounts:
        - mountPath: /app/data
          name: uptime-kuma-data
      volumes:
      - name: uptime-kuma-data
        persistentVolumeClaim:
          claimName:  uptime-kuma-data-claim
