services/uptime-kuma/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
  namespace: services
spec:
  selector:
    app: uptime-kuma
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
