services/uptime-kuma/ingress-test.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: uptime-kuma-ingress
  namespace: services
  annotations:
    kubernetes.io/ingress.class: traefik-external
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: https://uptime.test.local.hohepa.dev
    gethomepage.dev/group: Services
    gethomepage.dev/name: Uptime Kuma
    gethomepage.dev/icon: uptime-kuma.png
    gethomepage.dev/app: uptime-kuma
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`uptime.test.local.hohepa.dev`)
      kind: Rule
      services:
        - name: uptime-kuma
          port: 3001
  tls:
    secretName: test-local-hohepa-dev-tls
