services/uptime-kuma/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: uptime-kuma-ingress
  namespace: services
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`uptime.local.hohepa.dev`)
      kind: Rule
      services:
        - name: uptime-kuma
          port: 3001
